--- a/src/styles/buttons.scss
+++ b/src/styles/buttons.scss
@@ -2,7 +2,7 @@
   border-radius: 6px;
   font-weight: bold;
   font-size: 18px;
-  background: #0C5BA0;
+  background: #006880;
   color: #fff;
   border: 0;
   font-weight: normal;
@@ -10,7 +10,7 @@
   margin: 30px;
   &:hover, &:focus, &:active, &:focus:active {
     outline: 0;
-    background: #0C5BA0;
+    background: #006880;
     box-shadow: none;
   }  
 }
