--- a/src/styles/players.scss
+++ b/src/styles/players.scss
@@ -2,7 +2,7 @@
   position: fixed;
   width: 100%;
   height: 100%;
-  background: rgba(0,0,0,.7);
+  background: #fff;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -17,13 +17,16 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  color: #000;
+  box-shadow: 0px 2px 17px #ccc;
   select {
     width: 250px;
     margin: 20px 0;
   }
 
   &__header {
-    background: #cdccff;
+    background: #15d4ff;
+    color: #fff;
     width: 100%;
     text-align: center;
     height: 80px;
