--- a/src/styles/frames.scss
+++ b/src/styles/frames.scss
@@ -2,7 +2,7 @@
   border: solid 1px #666;
   border-spacing: 0;
   border-collapse: collapse;
-  margin: 30px auto;
+  margin: 0px auto;
   th, td {
     border: solid 1px #999;
     margin: 0;
@@ -60,7 +60,7 @@
   }
 
   &[data-status="ACTIVE"] {
-    background: yellow;
+    background: #e8e8e8;
   }
 
   &[data-status="SPARE"], &[data-status="STRIKE"] {
